5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1684_1100.log
== SUBMITION (2019-04-28 22:21:09) 
-- CODE:
a=int(input())

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.181192
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1100/main.py", line 3, in <module>
    if (valor == 2):
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:21:12) 
-- CODE:
a=int(input())

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (valor == 2):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:21:22) 
-- CODE:
valor=int(input())

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- EXECUTION TIME:
0.136852
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:21:24) 
-- CODE:
valor=int(input())

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:21:32) 
-- CODE:
valor=int(input())

if (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")
else:
	print("Animal: Invalido")
-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:22:30) 
-- CODE:
valor=int(input())
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- EXECUTION TIME:
0.269825
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:22:43) 
-- CODE:
valor=int(input())
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- OUTPUT:
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:23:40) 
-- CODE:
valor=int(input())
print("Entranda: ", valor)
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- OUTPUT:
Entranda:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:23:53) 
-- CODE:
valor=int(input())
print("Entranda: ", valor)
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- EXECUTION TIME:
0.135974
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entranda:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entranda:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entranda:  50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:23:58) 
-- CODE:
valor=int(input())
print("Entranda:", valor)
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- EXECUTION TIME:
0.122521
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entranda: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entranda: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entranda: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 22:24:00) 
-- CODE:
valor=int(input())
print("Entranda:", valor)
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- OUTPUT:
Entranda: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 22:24:13) 
-- CODE:
valor=int(input())
print("Entrada:", valor)
if ((valor!=2) and (valor!=5) and (valor!=10) and (valor!=20) and (valor!=50) and (valor!=100)):
	print("Animal: Invalido")
elif (valor == 2):
	print("Animal: Tartaruga")
elif (valor == 5):
	print("Animal: Garca")
elif (valor == 10):
	print("Animal: Arara")
elif (valor == 20):
	print("Animal: Mico-leaodourado")
elif (valor == 50):
	print("Animal: Onca-pintada")
elif (valor == 100):
	print("Animal: Garoupa")

-- EXECUTION TIME:
0.204232
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
